--- a/_posts/2020-1-09-my-love.md
+++ b/_posts/2020-1-09-my-love.md
@@ -5,4 +5,7 @@ tags: Article
 
 <div>{%- include extensions/soundcloud.html id='247064348' -%}</div> 
 
-The glittering happiness 
+## Introduction
+
+## Personal Touch
+Cool jazz is the dim light in the complete darkness after a day's bright sunlight. It lights up the happiness, but not too much, just enough to make me feel "life is so nice".
