--- a/_posts/2020-1-10-my-fear.md
+++ b/_posts/2020-1-10-my-fear.md
@@ -1,6 +1,6 @@
 ---
 title: Sopor Aeternus & The Ensemble of Shadows/My Fear
-tags: Article
+tags: Article Music
 ---
 
 My current #1 choice for music. 
@@ -15,5 +15,38 @@ Anna's music falls within the genre "other". She's just too unique to be tagged 
 
 So if I have to anticipate what I get from Anna's music, I would not be able to do so: her voice is like no other, and her music is the work of wonder. Ideally I would like to explore the combination of classical music and electric pulses, and she's just more than that simple integration. 
 
-## Recommendations 
+## Personal Touch 
+### Intention 
 I selected "Cage within a Cage" here because it touches me the most. Her music is difficult to interpret, and I guess she deliberately did so. This is the only piece that I manage to decode after translating the German captions into Chinese. I would say this is about her transgender identity, and about the fact that we need a meaning for life while there isn't any. 
+
+I frequently wonder why I appreciate this type of music much more than the others. Well, so far I don't have depression or other mental disorder. I wonder if it's because I read Sylvia Plath and loved the style, or if it's because naturally the wisdom hidden behind the dark side of emotions appeals to me. Nonetheless, Gothic is a theme quite a few people are passionate about -- not the majority though. Love and death, the only graceful things. I mean, aesthetically, they are the purest. 
+
+I guess it would be nice to include a story here, since I named this section "personal touch". Well, but I haven't decided how to present it, so this is a vague idea of the emotions... Enjoy... 
+
+### *My Fear*
+
+I laughed more than before.
+
+I shouldn't, but I couldn't help myself.
+
+I said I don't enjoy talking like that and didn't apologize. 
+
+I guess that's confusing, as you asked me why I didn't tell you. I was just afraid, and I'm sorry for that. 
+
+Some people said that love is love. Even more said that love is illusionary, so better to be careful than to be fool around. To be "mature", to be "realistic", to be "wise", you have to believe that love is about money and sex instead of emotions, and emotions don't matter for "adults" because they are short-live. 
+
+I'm not mature enough, too idealistic, "young dumb and broke". 
+
+<div>{%- include extensions/soundcloud.html id='324259656' -%}</div>
+
+I don't believe them. Emotions shape us all, and they change from time to time.
+
+I'm too young for anything, and sometimes I still follow my mom's advice. You are just old enough to be my tutor, so I'm just afraid to ask. In fact, there are a couple things I don't really dare talking about. I don't really have the courage to say, to name, or to ask. I'm not courageous at all when I talk to you. 
+
+You do want me to understand how you feel everyday, which Anna-Varney Cantodea explained in the other way. I was so shocked when I listened *Cage within a Cage* for the first time, and I guess that's what you tried to say. Cage within a cage, reality is just there. The deepest fear, the ultimate anger, the hopelessness -- I don't know if I can get along with them well. If I don't, I fear the consequences. 
+
+I tend to think more than I should. I tend to talk less than I could. You ask and ask, and I wait for the end. I know I'm horrible, so I don't step forward.
+
+I no longer read any love stories. I listen to tons of love songs, and I hope you are in each one. However, only Anna can describe with the highest precision. I want to finish all her works, but it's too painful. Like what I feel when I depict the next steps: I will leave in a few months, just enough for a break up with my first lover. 
+
+I'm fear of facing my real desires, which I hide all that time that I nearly forget. 
