edit and add file

--- a/_posts/2020-1-09-my-love.md
+++ b/_posts/2020-1-09-my-love.md
@@ -6,6 +6,10 @@ tags: Article
 <div>{%- include extensions/soundcloud.html id='247064348' -%}</div> 
 
 ## Introduction
-
+According to the wikipedia, cool jazz emerged in around 40s to 50s in twentieth century. 
+<!--more-->
 ## Personal Touch
+Basically, cool jazz is all the reasons I want to learn how to improvise, with a harmonica. I think it makes me happy, so I want to produce more happiness myself as well. 
+### Intention
 Cool jazz is the dim light in the complete darkness after a day's bright sunlight. It lights up the happiness, but not too much, just enough to make me feel "life is so nice".
+### *My Love*
